# Quad-Vision-GUI

./: CMakeLists.txt  README.md  contributors.txt  package.xml
src/: QuadGUI.pro  cameraworker.cpp  cameraworker.h  camlabel.cpp  quadgui.cpp  quadgui.h  quadgui.ui  vision.cpp
